feat: update Swagger integration for Users and Tracks instances
